

== RELEASE & CHANGES LOG [SourceForge ID] ======================================

--> http://pear.php.net/bugs/search.php?cmd=display&package_name[0]=PHP_Debug

(please use the Pear now, not the sourceforge tracker)

/!\ = Major modification since previous release.

== V1.0.3 -  2008 (sourceforge release V2.1.5) =================================

   - Added a new "constants" sub-panel inside the "vars & config" panel
   - [14694] Bug with the show source script when get_magic_quotes_gpc is On

== V1.0.2 - aug 2008 (sourceforge release V2.1.4) ==============================

  - Removed w3c validation on the fly feature

== V1.0.1 - mar 2008 (sourceforge release V2.1.3) ==============================

  - Corrected http://pear.php.net/bugs/12997
  - Corrected http://pear.php.net/bugs/12814
  - [WEB] Added a testimonials page
  - Corrected symfony project url in credits (........)

== V1.0.0 stable - jan 2008 (sourceforge release V2.1.2) =======================

  - Added credits to symfony for the idea of the floating div renderer 
  - Added a link for a direct input W3C validation
  - Added warning for local W3C validation
  - Corrected html validation in the W3C tab (dooh!)
  - Changed main version number for the pear one
  - Switched package to stable state
  - Fixed typo in the database debug tab
  - [12078] Moved examples to doc role
  - [10919] Created a setStartTime method for the php_debugline class

(sourceforge releases)
== V2.1.1 - Apr 2007 ===========================================================

  - /!\ Changed the file structure of the class to follow pear standarts
  now you must require 'PHP/Debug.php' instead of 'Debug.php'
  - /!\ General otions do not need a 'DEBUG_' prefix any more
  - /!\ getDisplay() public function renamed to getOutput()
  - Added a tab with an optional W3C validation with Services_W3C_HTMLValidator
  - Added version number of php extensions when available
  - Changed the license from PHP license to MIT