@@ -15,8 +15,8 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <email>qrf_coil[at]yahoo[dot]fr</email>
   <active>yes</active>
  </lead>
- <date>2008-09-24</date>
- <time>15:55:55</time>
+ <date>2009-01-12</date>
+ <time>22:55:55</time>
  <version>
   <release>1.0.3</release>
   <api>1.0.3</api>
